--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,6 +53,28 @@ p{
   color: #FFF;
   border: 1px solid white;
 }
+
+.btn1:disabled{
+  background: #49515c;
+  color: #FFF;
+}
+.btn1:disabled:hover{
+  border:1px solid  #5a5a5a;
+}
+.btn1:disabled> a{
+  color: #FFF;
+  cursor: auto;
+}
+.nonactive{
+  background-color: rgb(198, 196, 196);
+  color: #5a5a5a !important;
+}
+.nonactive img{
+  opacity: 0.8;
+}
+a.disabled{
+  pointer-events: none;
+}
 button:hover > a , button:focus > a {
   color: white;
 }
